# NaiveManageSystem

./: Base.h  CMakeLists.txt  README.md  main.c
Controller/: FileController.c  FileController.h  ItemController.c  ItemController.h  UserController.c  UserController.h
Model/: DataModel.c  DataModel.h  ItemModel.h  MetaModel.c  MetaModel.h  StatusModel.c  StatusModel.h  UserModel.h
